--- a/_frontend/dev/sass/partial/_helpers.scss
+++ b/_frontend/dev/sass/partial/_helpers.scss
@@ -160,5 +160,6 @@
 }
 
 .ft-2sm {
+    clear: both;
     font-size: 1.75em !important;   
 }
